--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -40,12 +40,6 @@
     }
 }
 
-.shadow {
-    -webkit-box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.75);
-    box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.75);
-}
-
 .nav {
     background: $secondary;
     color: $white;
@@ -54,6 +48,7 @@
     margin-top: 1.5rem;
     width: 100%;
     top: 0;
+    border:none;
     @include flex-row;
     @include xcross-centered;
     @include sticky;
@@ -90,7 +85,7 @@
     // search bar
     .inputcontainer {
         display: flex;
-        width: 50%;
+        width: 32%;
         min-height: 100%;
         align-items: center;
     }
@@ -131,7 +126,7 @@
     .innercontainer {
         @include flex-row;
         @include left-right-centered;
-        width: 60%;
+        width: 77%;
         min-height: 100%;
     }
 
