--- a/styles/HeroSection.module.scss
+++ b/styles/HeroSection.module.scss
@@ -7,56 +7,69 @@
 .heroWrapper {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  background-image: url(../public/images/hero-background.png);
+  align-items: flex-start;
+  background-color: $secondary;
   background-size:cover;
   cursor: pointer;
   width: 100%;
 }
 
-.planetOne {
+.heroInteraction {
+  margin-top:9rem;
+  margin-left:13.5rem;
+  width:40.5rem;
+  margin-bottom: 9rem;
+}
+
+.heroImage {
   position: absolute;
-  right: -6.25rem;
-  top: -4.625em;
-  transform: rotate(-9.64deg);
+  right: 11.625rem;
+  top: 8.688rem;
 }
 
 .heroText {
-  width:55%;
-  color:$secondary;
-  margin-top:23.125rem;
-  z-index: 1;
+  height: 9rem;
+  color:$white;
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 700;
-  font-size: 3rem;
-  line-height: 120%;
+  font-size: 2.5rem;
+  text-align: left;
+  line-height: 3rem;
+  letter-spacing: -0.02em;
+}
 
-  text-align: center;
-  letter-spacing: 0.01em;
+.heroSubtext {
+  margin-top: 1.5rem;
+  height: 3.5rem;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.2rem;
+  line-height: 1.75rem;
+  color:$secondary-text-light;
 }
 
 .buttonContainer {
   display:flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
-  margin-top: 2.5rem;
-  margin-bottom: 11.5rem;
+  margin-top: 3rem;
 }
 
 .getStartedButton {
-  background: $secondary;
+  background: $primary;
   box-shadow: 0px 25px 32px rgba(66, 66, 66, 0.15);
   border-radius: 40px;
   padding: 16px 32px;
   
   font-style: normal;
   font-weight: 600;
-  font-size: 24px;
-  line-height: 133.4%;
+  font-size: 1.5rem;
+  line-height: 148%;
   text-align: center;
-  color: $primary;
+  color: $white;
 
   border-color: transparent;
   text-transform: none;
