Initial about section, without explore zot card
Signed-off-by: Raul Kele <raulkeleblk@gmail.com>

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -14,10 +14,11 @@ $secondary: #0F2139 !default;
 $primary-text:#14191F !default;
 $secondary-text-light:#E0E5EB !default;
 $secondary-text-dark:#52637A !default;
-$success: #3772FF !default;
+$background: #F6F7F9 !default;
+$success: #2EAE4E !default;
 $info: #C0E0DE !default;
 $warning: #ED6A5A !default;
-$danger: #b82714 !default;
+$danger: #FF170A !default;
 $white: #fff !default;
 $light: #D3F3EE !default;
 $dark: #242327 !default;
