--- a/styles/Layout.module.scss
+++ b/styles/Layout.module.scss
@@ -5,6 +5,7 @@
   min-height: 100vh;
   width: 100%;
   height: calc(100vh - calc(100vh - 100%));
+  background-color: $background;
   @include flex-column;
   @include left-centered;
 
