fixed header links, added favicon
Signed-off-by: Raul Kele <raulkeleblk@gmail.com>

--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -101,6 +101,10 @@
         .textLink:hover {
             color:$white;
         }
+
+        .textLink:visited {
+            color:$white;
+        }
     }
     .searchicon {
         color: $primary;
